Fixed alignment issue on the Approach heading for all service pages and removed excess text from the What To Expect Section on these pages

--- a/src/index.css
+++ b/src/index.css
@@ -2318,6 +2318,10 @@ p:nth-of-type(3) {
   margin-top: -8rem;
 }
 
+.branding-subservice p {
+  margin-top: -3rem;
+}
+
 .sub-service-hero-circle {
   align-self: end;
   position: relative;
@@ -2466,7 +2470,7 @@ p:nth-of-type(3) {
 }
 
 .sub-service-approach-header {
-  width: 700px;
+  width: 800px;
   display: flex;
   flex-direction: column;
   gap: 1rem;
